[metadata]
name = async_web
version = attr: async_web.__version__
description = Handling websockets and http requests as a stream.
long_description = file: README.md
keywords = asyncio, websockets, web, client
url = https://github.com/teodorkostov/python-async-web
author = Teodor Kostov
author_email = kostov.teodor@gmail.com
license = MIT

[options]
install_requires =
  aiohttp>=3.8.1
  Rx>=3.2.0
  websockets>=10.3
